# restaurant-recommender-mvp

./: README.md  pm_answers.md  start.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  data.json  main.py  params.json  pyproject.toml  yelp_response.json
backend/app/api/: __init__.py  client_profile.py  health.py  restaurants.py
backend/app/constants/: categories.json
backend/app/core/: config.py
backend/app/models/: client_profile.py  restaurants.py  yelp_categories.py
backend/app/services/: profile_query.py  yelp.py
frontend/: README.md  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/clients/: route.ts
frontend/app/api/search/: route.ts
frontend/components/: ClientProfileForm.tsx  GoogleMapsComponent.tsx  HeroSection.tsx  RestaurantCard.tsx  RestaurantDetailModal.tsx  RestaurantDetailView.tsx  RestaurantGrid.tsx  RestaurantList.tsx  RestaurantMap.tsx  RestaurantReviews.tsx  SearchForm.tsx
frontend/components/layout/: Container.tsx  Footer.tsx  Header.tsx
frontend/components/ui/: badge.tsx  multi-select.tsx
frontend/lib/: api.ts  api_openapi.json  categories-utils.ts  mock_response.ts  types.ts  utils.ts
frontend/lib/constants/: client-form-options.ts  mock-reviews.ts
frontend/store/: useRestaurantStore.ts
